// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withHostedCognito test render test render correctly 1`] = `
<MockComp
  hostedCognitoSignIn={[Function]}
/>
`;

exports[`withHostedCognito test render test render correctly with hosted cognito button 1`] = `
<Button
  hostedCognitoSignIn={[Function]}
/>
`;
